Segunda version de Pagina web Gym

--- a/index.html
+++ b/index.html
@@ -93,6 +93,27 @@
         </section>
     </main>
 
+    </section>
+
+    <section id="contacto" class="contact-section container">
+        <div class="contact-box">
+            <h2 class="section-title">¿Tienes <span>Dudas?</span></h2>
+            <p>Escríbenos directamente para asesoría personalizada o preguntas sobre envíos.</p>
+            
+            <div class="contact-buttons">
+                <button id="btn-contacto-general" class="btn btn-primary">
+                    Chat con Soporte 💬
+                </button>
+                
+                <a href="mailto:info@ironfit.com" class="btn btn-outline">
+                    Enviar Correo ✉️
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <footer class="main-footer">
+
     <footer class="main-footer">
         <div class="container footer-grid">
             <div class="footer-col">
